incorporates new W3C tech report style for testing raise any issues at https://github.com/w3c/tr-design/issues

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             async class="remove"></script>
     <script class="remove">
       var respecConfig = {
+          useExperimentalStyles: true,
           // specification status (e.g. WD, LCWD, WG-NOTE, etc.). If in doubt use ED.
           specStatus:           "ED",
           //publishDate:  "2015-07-21",
