Very minor correction to a duplicate identifier.

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 </pre>    	
     	</div>
     	<div class="example" id="tbd">
-<pre class="stylesheet">@counter-style <dfn data-dfn-type="dfn" data-noexport="" id="ethiopic-halehame-ti-er">ethiopic-halehame-ti-er<a class="self-link" href="#ethiopic-halehame-ti-er"></a></dfn> {
+<pre class="stylesheet">@counter-style <dfn data-dfn-type="dfn" data-noexport="" id="ethiopic-halehame-ti-et">ethiopic-halehame-ti-et<a class="self-link" href="#ethiopic-halehame-ti-et"></a></dfn> {
   system: alphabetic;
   speak-as: upper-latin;
   symbols: ሀ ለ ሐ መ ሠ ረ ሰ ሸ ቀ ቐ በ ተ ቸ ኀ ነ ኘ አ ከ ኸ ወ ዐ ዘ ዠ የ ደ ጀ ገ ጠ ጨ ጰ ጸ ፀ ፈ ፐ ;
