Adding end-of-list inline continuation image.

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <section id="inline_continuation">
     	<h4>Inline End of List Continuation</h4>
     	<p><em>paragraph continuation at end of list - how much space after final list item?  is this common in classical style?</em></p>
-    	<p><em>[image samples needed]</em></p>
+    	<img src="images/end-of-list-inline-continuation.png"  alt=" " border="1" />
 	</section>
 	
     </section>
