work backup, progress on list tables.

--- a/index.html
+++ b/index.html
@@ -316,6 +316,186 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <p>The Unicode standard encodes Ethiopic syllables for many languages using Ethiopic script past and present.
     Alphabetic lists are commonplace in Ethiopic literature, but will conform to the letter inventory of the language of the surrounding content.
     The alphabetical style lists specified here do not encompass <em>all</em> languages using Ethiopic, but only those with a demonstrated requirement as found in corpus or stakeholder input.</p>
+    
+    <table>
+    <tr>
+      <th>Ge'ez</th>
+      <th>Amharic</th>
+      <th>Blin</th>
+      <th>Tigrinya<br/>(Eritrean)</th>
+      <th>Tigrinya<br/>(Ethiopian)</th>
+    </tr>
+    <tr valign="top" style="padding-left="0px">
+     <td>
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <ul>ሀ/</ul>
+         <ul>ለ/</ul>
+         <ul>ሐ/</ul>
+         <ul>መ/</ul>
+         <ul>ሠ/</ul>
+         <ul>ረ/</ul>
+         <ul>ሰ/</ul>
+         <ul>ቀ/</ul>
+         <ul>በ/</ul>
+         <ul>ተ/</ul>
+         <ul>ኀ/</ul>
+         <ul>ነ/</ul>
+         <ul>አ/</ul>
+         <ul>ከ/</ul>
+         <ul>ወ/</ul>
+         <ul>ዐ/</ul>
+         <ul>ዘ/</ul>
+         <ul>የ/</ul>
+         <ul>ደ/</ul>
+         <ul>ገ/</ul>
+         <ul>ጠ/</ul>
+         <ul>ጰ/</ul>
+         <ul>ጸ/</ul>
+         <ul>ፀ/</ul>
+         <ul>ፈ/</ul>
+         <ul>ፐ/</ul>
+       </ul>
+     </td>
+     <td>
+       <ul style="list-style-type:none; padding-left:0px">
+         <ul>ሀ/</ul>
+         <ul>ለ/</ul>
+         <ul>ሐ/</ul>
+         <ul>መ/</ul>
+         <ul>ሠ/</ul>
+         <ul>ረ/</ul>
+         <ul>ሰ/</ul>
+         <ul>ሸ</ul>
+         <ul>ቀ/</ul>
+         <ul>በ/</ul>
+         <ul>ተ/</ul>
+         <ul>ቸ/</ul>
+         <ul>ኀ/</ul>
+         <ul>ነ/</ul>
+         <ul>/</ul>
+         <ul>አ/</ul>
+         <ul>ከ/</ul>
+         <ul>ኘ/</ul>
+         <ul>ወ/</ul>
+         <ul>ዐ/</ul>
+         <ul>ዘ/</ul>
+         <ul>ዠ/</ul>
+         <ul>የ/</ul>
+         <ul>ደ/</ul>
+         <ul>ጀ/</ul>
+         <ul>ገ/</ul>
+         <ul>ጠ/</ul>
+         <ul>ጨ/</ul>
+         <ul>ጰ/</ul>
+         <ul>ጸ/</ul>
+         <ul>ፀ/</ul>
+         <ul>ፈ/</ul>
+         <ul>ፐ/</ul>
+       </ul>
+     </td>
+     <td>
+       <ul style="list-style-type:none; padding-left:0px">
+         <ul>ሀ/</ul>
+         <ul>ለ/</ul>
+         <ul>ሐ/</ul>
+         <ul>መ/</ul>
+         <ul>ሠ/</ul>
+         <ul>ረ/</ul>
+         <ul>ሰ/</ul>
+         <ul>ሸ</ul>
+         <ul>ቀ/</ul>
+         <ul>ቐ/</ul>
+         <ul>በ/</ul>
+         <ul>ተ/</ul>
+         <ul>ቸ/</ul>
+         <ul>ኀ/</ul>
+         <ul>ነ/</ul>
+         <ul>/</ul>
+         <ul>አ/</ul>
+         <ul>ከ/</ul>
+         <ul>ኘ/</ul>
+         <ul>ወ/</ul>
+         <ul>ዐ/</ul>
+         <ul>ዘ/</ul>
+         <ul>ዠ/</ul>
+         <ul>የ/</ul>
+         <ul>ደ/</ul>
+         <ul>ጀ/</ul>
+         <ul>ገ/</ul>
+         <ul>ጠ/</ul>
+         <ul>ጨ/</ul>
+         <ul>ጰ/</ul>
+         <ul>ጸ/</ul>
+         <ul>ፀ/</ul>
+         <ul>ፈ/</ul>
+         <ul>ፐ/</ul>
+       </ul>
+     </td>
+     <td>
+       <ul style="list-style-type:none; padding-left:0px">
+         <ul>ሀ/</ul>
+         <ul>ለ/</ul>
+         <ul>ሐ/</ul>
+         <ul>መ/</ul>
+         <ul>ሠ/</ul>
+         <ul>ረ/</ul>
+         <ul>ሰ/</ul>
+         <ul>ቀ/</ul>
+         <ul>በ/</ul>
+         <ul>ተ/</ul>
+         <ul>ኀ/</ul>
+         <ul>ነ/</ul>
+         <ul>አ/</ul>
+         <ul>ከ/</ul>
+         <ul>ወ/</ul>
+         <ul>ዐ/</ul>
+         <ul>ዘ/</ul>
+         <ul>የ/</ul>
+         <ul>ደ/</ul>
+         <ul>ገ/</ul>
+         <ul>ጠ/</ul>
+         <ul>ጰ/</ul>
+         <ul>ጸ/</ul>
+         <ul>ፀ/</ul>
+         <ul>ፈ/</ul>
+         <ul>ፐ/</ul>
+       </ul>
+     </td>
+     <td>
+       <ul style="list-style-type:none; padding-left:0px">
+         <ul>ሀ/</ul>
+         <ul>ለ/</ul>
+         <ul>ሐ/</ul>
+         <ul>መ/</ul>
+         <ul>ሠ/</ul>
+         <ul>ረ/</ul>
+         <ul>ሰ/</ul>
+         <ul>ቀ/</ul>
+         <ul>በ/</ul>
+         <ul>ተ/</ul>
+         <ul>ኀ/</ul>
+         <ul>ነ/</ul>
+         <ul>አ/</ul>
+         <ul>ከ/</ul>
+         <ul>ወ/</ul>
+         <ul>ዐ/</ul>
+         <ul>ዘ/</ul>
+         <ul>የ/</ul>
+         <ul>ደ/</ul>
+         <ul>ገ/</ul>
+         <ul>ጠ/</ul>
+         <ul>ጰ/</ul>
+         <ul>ጸ/</ul>
+         <ul>ፀ/</ul>
+         <ul>ፈ/</ul>
+         <ul>ፐ/</ul>
+       </ul>
+     </td>
+    </tr>
+    </table>
     	<div class="example" id="tbd">
 <pre class="stylesheet">@counter-style <dfn data-dfn-type="dfn" data-noexport="" id="ethiopic-halehame-gez">ethiopic-halehame-gez<a class="self-link" href="#ethiopic-halehame-gez"></a></dfn> {
   system: alphabetic;
