file name change, and images linked from document.

--- a/index.html
+++ b/index.html
@@ -299,11 +299,14 @@ and in some cases limitations imposed by desktop publishing software designed fo
     	<h4>List Item Marker</h4>
    		 <p><em>What are the preferred suffix symbols? How much, if any, white space follows the suffix? space, punctuation space, thin space, hair space, etc? produce comparative examples</em>
    		 <br/>/<br/>፦<br/>.<br/>)</p>
+   		 <img src="images/list-aligned-on-counter-left.png" border="1"/><br/>
+   		 <img src="images/list-aligned-on-suffix.png" border="1"/>
     </section>
     
     <section id="inline_lists">
     <h4>Inline Lists</h4>
-    <p><em>How much space after marker?</em></p>
+    <p><em>How much space after marker? Is the space after marker the different when Ethiopic wordspace is in use?</em></p>
+    <p><img src="images/inline-list.png" border="1"/><br/>[Update image to show with and without wordspace]</p>
     </section>
     
     <section id="ordinal_lists">
