Tweak to section title for clarity.

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     </section>
     
     <section id="alphabetic_lists">
-    <h4>Alphabetic Lists</h4>
+    <h4>Alphabetic (ሀለሐመ) Lists</h4>
     <p>The Unicode standard encodes Ethiopic syllables for many languages using Ethiopic script past and present.
     Alphabetic lists are commonplace in Ethiopic literature, but will conform to the letter inventory of the language of the surrounding content.
     The alphabetical style lists specified here do not encompass <em>all</em> languages using Ethiopic, but only those with a demonstrated requirement as found in corpus or stakeholder input.</p>
