Fixing list html syntax, adding Abegede tables.

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     Alphabetic lists are commonplace in Ethiopic literature, but will conform to the letter inventory of the language of the surrounding content.
     The alphabetical style lists specified here do not encompass <em>all</em> languages using Ethiopic, but only those with a demonstrated requirement as found in corpus or stakeholder input.</p>
     
+    <p><em>Issue: ቨ appears to be equally included and omitted in lists.</em></p>
     <table>
     <tr>
       <th>Ge'ez</th>
@@ -328,173 +329,203 @@ and in some cases limitations imposed by desktop publishing software designed fo
       <th>Tigrinya<br/>(Eritrean)</th>
       <th>Tigrinya<br/>(Ethiopian)</th>
     </tr>
-    <tr valign="top" style="padding-left="0px">
+    <tr valign="top" style="padding-left=0px">
      <td>
+       <!-- Ge'ez -->
        <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
         list-style-position:inside;
         margin:0;
         padding:0;">
-         <ul>ሀ/</ul>
-         <ul>ለ/</ul>
-         <ul>ሐ/</ul>
-         <ul>መ/</ul>
-         <ul>ሠ/</ul>
-         <ul>ረ/</ul>
-         <ul>ሰ/</ul>
-         <ul>ቀ/</ul>
-         <ul>በ/</ul>
-         <ul>ተ/</ul>
-         <ul>ኀ/</ul>
-         <ul>ነ/</ul>
-         <ul>አ/</ul>
-         <ul>ከ/</ul>
-         <ul>ወ/</ul>
-         <ul>ዐ/</ul>
-         <ul>ዘ/</ul>
-         <ul>የ/</ul>
-         <ul>ደ/</ul>
-         <ul>ገ/</ul>
-         <ul>ጠ/</ul>
-         <ul>ጰ/</ul>
-         <ul>ጸ/</ul>
-         <ul>ፀ/</ul>
-         <ul>ፈ/</ul>
-         <ul>ፐ/</ul>
+         <li>ሀ/</li>
+         <li>ለ/</li>
+         <li>ሐ/</li>
+         <li>መ/</li>
+         <li>ሠ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ቀ/</li>
+         <li>በ/</li>
+         <li>ተ/</li>
+         <li>ኀ/</li>
+         <li>ነ/</li>
+         <li>አ/</li>
+         <li>ከ/</li>
+         <li>ወ/</li>
+         <li>ዐ/</li>
+         <li>ዘ/</li>
+         <li>የ/</li>
+         <li>ደ/</li>
+         <li>ገ/</li>
+         <li>ጠ/</li>
+         <li>ጰ/</li>
+         <li>ጸ/</li>
+         <li>ፀ/</li>
+         <li>ፈ/</li>
+         <li>ፐ/</li>
        </ul>
      </td>
      <td>
-       <ul style="list-style-type:none; padding-left:0px">
-         <ul>ሀ/</ul>
-         <ul>ለ/</ul>
-         <ul>ሐ/</ul>
-         <ul>መ/</ul>
-         <ul>ሠ/</ul>
-         <ul>ረ/</ul>
-         <ul>ሰ/</ul>
-         <ul>ሸ</ul>
-         <ul>ቀ/</ul>
-         <ul>በ/</ul>
-         <ul>ተ/</ul>
-         <ul>ቸ/</ul>
-         <ul>ኀ/</ul>
-         <ul>ነ/</ul>
-         <ul>/</ul>
-         <ul>አ/</ul>
-         <ul>ከ/</ul>
-         <ul>ኘ/</ul>
-         <ul>ወ/</ul>
-         <ul>ዐ/</ul>
-         <ul>ዘ/</ul>
-         <ul>ዠ/</ul>
-         <ul>የ/</ul>
-         <ul>ደ/</ul>
-         <ul>ጀ/</ul>
-         <ul>ገ/</ul>
-         <ul>ጠ/</ul>
-         <ul>ጨ/</ul>
-         <ul>ጰ/</ul>
-         <ul>ጸ/</ul>
-         <ul>ፀ/</ul>
-         <ul>ፈ/</ul>
-         <ul>ፐ/</ul>
+       <!-- Amharic -->
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <li>ሀ/</li>
+         <li>ለ/</li>
+         <li>ሐ/</li>
+         <li>መ/</li>
+         <li>ሠ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ሸ/</li>
+         <li>ቀ/</li>
+         <li>በ/</li>
+         <li>ተ/</li>
+         <li>ቸ/</li>
+         <li>ኀ/</li>
+         <li>ነ/</li>
+         <li>ኘ/</li>
+         <li>አ/</li>
+         <li>ከ/</li>
+         <li>ኸ/</li>
+         <li>ወ/</li>
+         <li>ዐ/</li>
+         <li>ዘ/</li>
+         <li>ዠ/</li>
+         <li>የ/</li>
+         <li>ደ/</li>
+         <li>ጀ/</li>
+         <li>ገ/</li>
+         <li>ጠ/</li>
+         <li>ጨ/</li>
+         <li>ጰ/</li>
+         <li>ጸ/</li>
+         <li>ፀ/</li>
+         <li>ፈ/</li>
+         <li>ፐ/</li>
        </ul>
      </td>
      <td>
-       <ul style="list-style-type:none; padding-left:0px">
-         <ul>ሀ/</ul>
-         <ul>ለ/</ul>
-         <ul>ሐ/</ul>
-         <ul>መ/</ul>
-         <ul>ሠ/</ul>
-         <ul>ረ/</ul>
-         <ul>ሰ/</ul>
-         <ul>ሸ</ul>
-         <ul>ቀ/</ul>
-         <ul>ቐ/</ul>
-         <ul>በ/</ul>
-         <ul>ተ/</ul>
-         <ul>ቸ/</ul>
-         <ul>ኀ/</ul>
-         <ul>ነ/</ul>
-         <ul>/</ul>
-         <ul>አ/</ul>
-         <ul>ከ/</ul>
-         <ul>ኘ/</ul>
-         <ul>ወ/</ul>
-         <ul>ዐ/</ul>
-         <ul>ዘ/</ul>
-         <ul>ዠ/</ul>
-         <ul>የ/</ul>
-         <ul>ደ/</ul>
-         <ul>ጀ/</ul>
-         <ul>ገ/</ul>
-         <ul>ጠ/</ul>
-         <ul>ጨ/</ul>
-         <ul>ጰ/</ul>
-         <ul>ጸ/</ul>
-         <ul>ፀ/</ul>
-         <ul>ፈ/</ul>
-         <ul>ፐ/</ul>
+       <!-- Blin -->
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <li>ሀ/</li>
+         <li>ለ/</li>
+         <li>ሐ/</li>
+         <li>መ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ሸ/</li>
+         <li>ቀ/</li>
+         <li>ቐ/</li>
+         <li>በ/</li>
+         <li>ተ/</li>
+         <li>ቸ/</li>
+         <li>ኀ/</li>
+         <li>ነ/</li>
+         <li>ኘ/</li>
+         <li>አ/</li>
+         <li>ከ/</li>
+         <li>ኸ/</li>
+         <li>ወ/</li>
+         <li>ዐ/</li>
+         <li>ዘ/</li>
+         <li>ዠ/</li>
+         <li>የ/</li>
+         <li>ደ/</li>
+         <li>ጀ/</li>
+         <li>ገ/</li>
+         <li>ጘ/</li>
+         <li>ጠ/</li>
+         <li>ጨ/</li>
+         <li>ጰ/</li>
+         <li>ጸ/</li>
+         <li>ፀ/</li>
+         <li>ፈ/</li>
+         <li>ፐ/</li>
        </ul>
      </td>
      <td>
-       <ul style="list-style-type:none; padding-left:0px">
-         <ul>ሀ/</ul>
-         <ul>ለ/</ul>
-         <ul>ሐ/</ul>
-         <ul>መ/</ul>
-         <ul>ሠ/</ul>
-         <ul>ረ/</ul>
-         <ul>ሰ/</ul>
-         <ul>ቀ/</ul>
-         <ul>በ/</ul>
-         <ul>ተ/</ul>
-         <ul>ኀ/</ul>
-         <ul>ነ/</ul>
-         <ul>አ/</ul>
-         <ul>ከ/</ul>
-         <ul>ወ/</ul>
-         <ul>ዐ/</ul>
-         <ul>ዘ/</ul>
-         <ul>የ/</ul>
-         <ul>ደ/</ul>
-         <ul>ገ/</ul>
-         <ul>ጠ/</ul>
-         <ul>ጰ/</ul>
-         <ul>ጸ/</ul>
-         <ul>ፀ/</ul>
-         <ul>ፈ/</ul>
-         <ul>ፐ/</ul>
+       <!-- Eritrean Tigrinya -->
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <li>ሀ/</li>
+         <li>ለ/</li>
+         <li>ሐ/</li>
+         <li>መ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ሸ/</li>
+         <li>ቀ/</li>
+         <li>ቐ/</li>
+         <li>በ/</li>
+         <li>ተ/</li>
+         <li>ቸ/</li>
+         <li>ነ/</li>
+         <li>ኘ/</li>
+         <li>አ/</li>
+         <li>ከ/</li>
+         <li>ኸ/</li>
+         <li>ወ/</li>
+         <li>ዐ/</li>
+         <li>ዘ/</li>
+         <li>ዠ/</li>
+         <li>የ/</li>
+         <li>ደ/</li>
+         <li>ጀ/</li>
+         <li>ገ/</li>
+         <li>ጠ/</li>
+         <li>ጨ/</li>
+         <li>ጰ/</li>
+         <li>ጸ/</li>
+         <li>ፈ/</li>
+         <li>ፐ/</li>
        </ul>
      </td>
      <td>
-       <ul style="list-style-type:none; padding-left:0px">
-         <ul>ሀ/</ul>
-         <ul>ለ/</ul>
-         <ul>ሐ/</ul>
-         <ul>መ/</ul>
-         <ul>ሠ/</ul>
-         <ul>ረ/</ul>
-         <ul>ሰ/</ul>
-         <ul>ቀ/</ul>
-         <ul>በ/</ul>
-         <ul>ተ/</ul>
-         <ul>ኀ/</ul>
-         <ul>ነ/</ul>
-         <ul>አ/</ul>
-         <ul>ከ/</ul>
-         <ul>ወ/</ul>
-         <ul>ዐ/</ul>
-         <ul>ዘ/</ul>
-         <ul>የ/</ul>
-         <ul>ደ/</ul>
-         <ul>ገ/</ul>
-         <ul>ጠ/</ul>
-         <ul>ጰ/</ul>
-         <ul>ጸ/</ul>
-         <ul>ፀ/</ul>
-         <ul>ፈ/</ul>
-         <ul>ፐ/</ul>
+       <!-- Ethiopian Tigrinya -->
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <li>ሀ/</li>
+         <li>ለ/</li>
+         <li>ሐ/</li>
+         <li>መ/</li>
+         <li>ሠ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ሸ/</li>
+         <li>ቀ/</li>
+         <li>ቐ/</li>
+         <li>በ/</li>
+         <li>ተ/</li>
+         <li>ቸ/</li>
+         <li>ኀ/</li>
+         <li>ነ/</li>
+         <li>ኘ/</li>
+         <li>አ/</li>
+         <li>ከ/</li>
+         <li>ኸ/</li>
+         <li>ወ/</li>
+         <li>ዐ/</li>
+         <li>ዘ/</li>
+         <li>ዠ/</li>
+         <li>የ/</li>
+         <li>ደ/</li>
+         <li>ጀ/</li>
+         <li>ገ/</li>
+         <li>ጠ/</li>
+         <li>ጨ/</li>
+         <li>ጰ/</li>
+         <li>ጸ/</li>
+         <li>ፀ/</li>
+         <li>ፈ/</li>
+         <li>ፐ/</li>
        </ul>
      </td>
     </tr>
@@ -552,6 +583,172 @@ and in some cases limitations imposed by desktop publishing software designed fo
     	<p>The አበገደ ordering is potentially desirable to any language using the Ethiopic syllabary.
     	The ordering is less likely to be found in the writing traditions of languages that have a written tradition of under a hundred years.
     	The language specific orders orders shown here are those found in utilization in corpus (<em>give references</em>.</p>
+    <table>
+    <tr>
+      <th>Ge'ez</th>
+      <th>Amharic</th>
+      <th>Tigrinya<br/>(Eritrean)</th>
+      <th>Tigrinya<br/>(Ethiopian)</th>
+    </tr>
+    <tr valign="top" style="padding-left=0px">
+     <td>
+       <!-- Ge'ez -->
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <li>አ/</li>
+         <li>በ/</li>
+         <li>ገ/</li>
+         <li>ደ/</li>
+         <li>ሀ/</li>
+         <li>ወ/</li>
+         <li>ዘ/</li>
+         <li>ሐ/</li>
+         <li>ጠ/</li>
+         <li>የ/</li>
+         <li>ከ/</li>
+         <li>ለ/</li>
+         <li>መ/</li>
+         <li>ነ/</li>
+         <li>ሠ/</li>
+         <li>ዐ/</li>
+         <li>ፈ/</li>
+         <li>ጸ/</li>
+         <li>ቀ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ተ/</li>
+         <li>ኀ/</li>
+         <li>ፀ/</li>
+         <li>ጰ/</li>
+         <li>ፐ/</li>
+       </ul>
+     </td>
+     <td>
+       <!-- Amharic -->
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <li>አ/</li>
+         <li>በ/</li>
+         <li>ገ/</li>
+         <li>ደ/</li>
+         <li>ጀ/</li>
+         <li>ሀ/</li>
+         <li>ወ/</li>
+         <li>ዘ/</li>
+         <li>ዠ/</li>
+         <li>ሐ/</li>
+         <li>ጠ/</li>
+         <li>ጨ/</li>
+         <li>የ/</li>
+         <li>ከ/</li>
+         <li>ኸ/</li>
+         <li>ለ/</li>
+         <li>መ/</li>
+         <li>ነ/</li>
+         <li>ኘ/</li>
+         <li>ሠ/</li>
+         <li>ዐ/</li>
+         <li>ፈ/</li>
+         <li>ጸ/</li>
+         <li>ቀ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ሸ/</li>
+         <li>ተ/</li>
+         <li>ቸ/</li>
+         <li>ኀ/</li>
+         <li>ፀ/</li>
+         <li>ጰ/</li>
+         <li>ፐ/</li>
+       </ul>
+     </td>
+     <td>
+       <!-- Eritrean Tigrinya -->
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <li>አ/</li>
+         <li>በ/</li>
+         <li>ገ/</li>
+         <li>ደ/</li>
+         <li>ጀ/</li>
+         <li>ሀ/</li>
+         <li>ወ/</li>
+         <li>ዘ/</li>
+         <li>ዠ/</li>
+         <li>ሐ/</li>
+         <li>ጠ/</li>
+         <li>ጨ/</li>
+         <li>የ/</li>
+         <li>ከ/</li>
+         <li>ኸ/</li>
+         <li>ለ/</li>
+         <li>መ/</li>
+         <li>ነ/</li>
+         <li>ኘ/</li>
+         <li>ዐ/</li>
+         <li>ፈ/</li>
+         <li>ጸ/</li>
+         <li>ቀ/</li>
+         <li>ቐ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ሸ/</li>
+         <li>ተ/</li>
+         <li>ቸ/</li>
+         <li>ጰ/</li>
+         <li>ፐ/</li>
+       </ul>
+     </td>
+     <td>
+       <!-- Ethiopian Tigrinya -->
+       <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
+        list-style-position:inside;
+        margin:0;
+        padding:0;">
+         <li>አ/</li>
+         <li>በ/</li>
+         <li>ገ/</li>
+         <li>ደ/</li>
+         <li>ጀ/</li>
+         <li>ሀ/</li>
+         <li>ወ/</li>
+         <li>ዘ/</li>
+         <li>ዠ/</li>
+         <li>ሐ/</li>
+         <li>ጠ/</li>
+         <li>ጨ/</li>
+         <li>የ/</li>
+         <li>ከ/</li>
+         <li>ኸ/</li>
+         <li>ለ/</li>
+         <li>መ/</li>
+         <li>ነ/</li>
+         <li>ኘ/</li>
+         <li>ሠ/</li>
+         <li>ዐ/</li>
+         <li>ፈ/</li>
+         <li>ጸ/</li>
+         <li>ቀ/</li>
+         <li>ቐ/</li>
+         <li>ረ/</li>
+         <li>ሰ/</li>
+         <li>ሸ/</li>
+         <li>ተ/</li>
+         <li>ቸ/</li>
+         <li>ኀ/</li>
+         <li>ፀ/</li>
+         <li>ጰ/</li>
+         <li>ፐ/</li>
+       </ul>
+     </td>
+    </tr>
+    </table>
     	<div class="example" id="tbd">
 <pre class="stylesheet">@counter-style <dfn data-dfn-type="dfn" data-noexport="" id="ethiopic-abegede-gez">ethiopic-abegede-gez<a class="self-link" href="#ethiopic-abegede-gez"></a></dfn> {
   system: alphabetic;
@@ -586,7 +783,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 <pre class="stylesheet">@counter-style <dfn data-dfn-type="dfn" data-noexport="" id="ethiopic-abegede-ti-er">ethiopic-abegede-ti-er<a class="self-link" href="#ethiopic-abegede-ti-er"></a></dfn> {
   system: alphabetic;
   speak-as: upper-latin;
-  symbols: አ በ ገ ደ ጀ ሀ ወ ዘ ዠ ሐ ጠ ጨ የ ከ ኸ ለ መ ነ ኘ ሠ ዐ ፈ ጸ ቀ ቐ ረ ሰ ሸ ተ ቸ ኀ ፀ ጰ ፐ ;
+  symbols: አ በ ገ ደ ጀ ሀ ወ ዘ ዠ ሐ ጠ ጨ የ ከ ኸ ለ መ ነ ኘ ሠ ዐ ፈ ጸ ቀ ቐ ረ ሰ ሸ ተ ቸ ኀ ጰ ፐ ;
   suffix: "/&amp;#x2009;";
 }
 </pre>    	
