Backing up work on Section 6.

--- a/index.html
+++ b/index.html
@@ -878,17 +878,52 @@ and in some cases limitations imposed by desktop publishing software designed fo
 
       <section id="ethiopic_abbreviation_formation">
       	<h3>Abbreviation formation</h3>
-      	<p><em>Discuss patterns and terminal punctuation.  Note language specific conventions.</em></p>
+		<p>Abbreviations in Ethiopic languages will apply an abbreviation marker ("/" or ".") placed between the first letters of each word in a phrase.
+		Two letter words may not be abbreviated. The last word in an abbreviation may remain whole. Single word abbreviation that applies a right side truncation
+		(vs mid) will apply a "." as the abbreviation maker.
+		</p>
+		<p>Examples<br/>
+		<span style="text-decoration: underline;">Multi Word</span><br/>
+		ሆ/ል	ሆስፒታል
+		<br/>&nbsp;<br/>
+		<span style="text-decoration: underline;">Single Word</span><br/>
+      	ጠ/ሚ  ጠቅላይ ሚኒስትር<br/>
+      	ኢ/ኦ/ተ/ቤ/ክ
+      	</p>
+      	<p><em>Issues:
+		<ol>
+		  <li>When "." is used as the abbreviation marker, it is sometimes found at the end of the abbreviation.</li>
+		  <li>Confirm single word abbreviation rule.</li>
+		  <li>Are mixed abbreviation markers appropriate? Some well established abbreviations apply a "." as the marker, for example
+		  "አዲስ አበባ ዩኒቨርሲቲ" becomes "አ.አ.ዩ".</li>
+		  <li>What symbol is applied for foreign words transcribed into an Ethiopic languages?</li>
+		</ol>
+		</em></p>
+      	<!-- An extreme example with 11 levels: በኢ/ኦ/ተ/ቤ/ክ/ሰ/ት/ቤ/ማ/መ/ማኅበረ ቅዱሳን  via http://eotcmk.org/site/component/contact/?task=view&contact_id=1 -->
       </section>
       
       <section id="ethiopic_ordinal_notation">
       	<h3>Ordinal Notation</h3>
-     	 <p><em>Superscript or not. Note language specific conventions.</em></p>
+     	 <p>An ordinal number is formed in Amharic when "ኛ", and in Tigrinya when "ይ", follows a cardinal number.
+     	 The ordinal marker is often, but not always, rendered in superscript form. The superscript practice is most prevalent with ordinals
+     	 in western numerals, but is also applied with Ethiopic numerals.
+     	<p><em>Issues:
+		<ol>
+		  <li>What letters should be superscripted, and it what contexts? For example, "ሳ" and "ብር" may also be superscripted in
+		  presentation of prices but is not common in print (found mostly in store front advertising).</li>
+		  <li>Always superscript? Language or locale specific? As a setting?</li>
+		  <li>An argument goes that superscript of "ኛ" should not follow an Ethiopic numerals since the counting system is put into a Ge'ez context
+		  and Ge'ez literature does not use a superscript.  Yet "ኛ" is appropriate to Amharic language and is not a letter found in Ge'ez. The class of
+		  literature may be at issue here, such a religious materials.</li>
+		</ol>
+		</em></p>
       </section>
       
       <section id="ethiopic_comma_usage">
       	<h3>Ethiopic Comma Usage</h3>
       	<p><em>Rules of usage for the two Ethiopic commas. Note language specific conventions.</em></p>
+      	፣ ፥
+      	mention "," used with numbers -only?
       </section>
 </section>
 
