Adding note on potential CSS word-separator property.

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     	was composed and delivered with white space. Likewise in the reverse, a user who preferred white space could have their preference
     	supported in a document that encodes Ethiopic wordspaces only. Similarly, this functionality would be useful to users of an editor application.</p>
     	<p><em>Develop rules for space-wordspace substitution (e.g. context for when not to substitute a space for wordspace).</em></p>
+    	<p><em>This could lead to a CSS word-separator property that a javascript could manipulate to toggle the wordspace.</em></p>
     </section>         
     </section>
 </section>
@@ -192,7 +193,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 		<li>Words of a single syllable are not split over lines.</li>
 		<li>Words of two letters are not split over lines.</li>
 		<li>Only letters, numbers, or opening punctuation may start a new line.</li>
-		<li>Words are split along a syllbale boundary.</li>
+		<li>Words are split along a syllable boundary.</li>
 		<li>A consonant cluster may not be split.</li>
 	</ul>
       </section>
